--- a/create.html
+++ b/create.html
@@ -49,6 +49,15 @@
       /* IE and Edge */
     }
 
+    body.page-index {
+      font-family: 'Sora', sans-serif;
+    }
+
+    body.page-index .banner,
+    body.page-index .banner * {
+      font-family: var(--font-primary);
+    }
+
     /* 隐藏 Webkit 浏览器的滚动条 (Chrome, Safari, Opera) */
     html::-webkit-scrollbar,
     body::-webkit-scrollbar {
@@ -1354,11 +1363,11 @@
   /* 描述文字 - Sora 细体，减小字号 */
   .create-description {
     font-family: 'Sora', sans-serif;
-    width: 48%;
+    width: 55%;
     font-size: clamp(1rem, 1.8vw, 0.75rem);
     font-weight: 300;
     line-height: 1.6;
-    color: #FFFFFF;
+    color: #a5a5a5;
     margin-bottom: var(--spacing-lg);
     text-align: left;
   }
