--- a/sections/ai_solutions/ai_solutions.html
+++ b/sections/ai_solutions/ai_solutions.html
@@ -56,9 +56,9 @@
   .ai-solutions-subtitle {
     font-family: 'Sora', sans-serif;
     font-size: clamp(1rem, 1.8vw, 0.75rem);
-    color: #FFFFFF;
+    color: #a5a5a5;
     line-height: 1.8;
-    max-width: 50%;
+    max-width: 60%;
     margin: 0 auto;
     text-align: center;
     font-weight: 300;
