--- a/sections/compose/compose.html
+++ b/sections/compose/compose.html
@@ -105,11 +105,11 @@
   /* 描述文字 - Sora 细体，减小字号 */
   .compose-description {
     font-family: 'Sora', sans-serif;
-    width: 48%;
+    width: 55%;
     font-size: clamp(1rem, 1.8vw, 0.75rem);
     font-weight: 300;
     line-height: 1.6;
-    color: #FFFFFF;
+    color: #a5a5a5;
     margin-bottom: var(--spacing-lg);
     text-align: left;
   }
