--- a/global/head.html
+++ b/global/head.html
@@ -49,6 +49,15 @@
       /* IE and Edge */
     }
 
+    body.page-index {
+      font-family: 'Sora', sans-serif;
+    }
+
+    body.page-index .banner,
+    body.page-index .banner * {
+      font-family: var(--font-primary);
+    }
+
     /* 隐藏 Webkit 浏览器的滚动条 (Chrome, Safari, Opera) */
     html::-webkit-scrollbar,
     body::-webkit-scrollbar {
