--- a/sections/adaptation/adaptation.html
+++ b/sections/adaptation/adaptation.html
@@ -1,282 +1,288 @@
 <style>
-/* Adaptation Section - 选择起点模块 */
-.adaptation-section {
-  background-color: var(--color-bg);
-  padding: 120px 20px;
-  position: relative;
-  overflow: hidden;
-}
-
-.adaptation-container {
-  max-width: 1500px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-/* 顶部标签 */
-.adaptation-label {
-  font-size: 20px;
-  letter-spacing: 0px;
-  text-transform: uppercase;
-  color: #888888;
-  margin-bottom: 20px;
-  font-weight: 500;
-}
-
-/* 主标题 */
-.adaptation-title {
-  font-size: 42px;
-  font-weight: 700;
-  color: #FFFFFF;
-  margin-bottom: 16px;
-  line-height: 1.2;
-}
-
-/* 副标题 */
-.adaptation-subtitle {
-  font-size: 22px;
-  color: #999999;
-  margin-bottom: 20px;
-  line-height: 1.6;
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* 外层包裹容器 - 类似 assistant 的 card 容器 */
-.adaptation-wrapper {
-  max-width: 1215px;
-  margin: 0 auto;
-}
-
-.adaptation-outer-card {
-  background: var(--color-bg-secondary);
-  border-radius: 24px;
-  padding: 43px 56px 48px;
-  min-height: 523px;
-  display: flex;
-  align-items: flex-start;
-  transition: all var(--transition);
-}
-
-.adaptation-outer-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
-}
-
-/* 卡片容器 - 三个功能项并排 */
-.adaptation-cards {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 72px;
-  align-items: stretch;
-  width: 100%;
-}
-
-/* 单个卡片 */
-.adaptation-card {
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-  background: transparent;
-  max-width: 320px;
-  margin: 0 auto;
-}
-
-.adaptation-card:hover {
-  transform: translateY(-4px);
-}
-
-/* 卡片图片容器 */
-.adaptation-card-image-wrapper {
-  width: 100%;
-  overflow: hidden;
-  border-radius: 16px;
-  margin-bottom: 24px;
-}
-
-/* 卡片图片 */
-.adaptation-card-image {
-  width: 100%;
-  height: 280px;
-  object-fit: cover;
-  display: block;
-  transition: transform 0.4s ease;
-}
-
-.adaptation-card:hover .adaptation-card-image {
-  transform: scale(1.05);
-}
-
-/* 卡片视频 */
-.adaptation-card-video {
-  width: 100%;
-  height: 280px;
-  object-fit: cover;
-  display: block;
-  transition: transform 0.4s ease;
-  cursor: pointer;
-}
-
-.adaptation-card:hover .adaptation-card-video {
-  transform: scale(1.05);
-}
-
-/* 视频预览模态框 */
-.video-modal {
-  display: none;
-  position: fixed;
-  z-index: 10000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  backdrop-filter: blur(10px);
-}
-
-.video-modal-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 90%;
-  max-height: 90%;
-  width: auto;
-  height: auto;
-}
-
-.video-modal video {
-  width: 100%;
-  height: 100%;
-  max-width: 80vw;
-  max-height: 80vh;
-  object-fit: contain;
-}
-
-.video-modal-close {
-  position: absolute;
-  top: 20px;
-  right: 40px;
-  color: white;
-  font-size: 40px;
-  font-weight: bold;
-  cursor: pointer;
-  z-index: 10001;
-  transition: color 0.3s ease;
-}
-
-.video-modal-close:hover {
-  color: #ccc;
-}
-
-/* 卡片内容区域（图片下方）*/
-.adaptation-card-content {
-  padding: 0 12px;
-  text-align: center;
-}
-
-/* 卡片标题 */
-.adaptation-card-title {
-  font-size: 24px;
-  font-weight: 600;
-  color: #FFFFFF;
-  margin-bottom: 12px;
-  line-height: 1.3;
-}
-
-/* 卡片描述 */
-.adaptation-card-description {
-  font-size: 21px;
-  color: #CCCCCC;
-  line-height: 1.6;
-  margin: 0;
-}
-
-/* 响应式设计 - 平板 */
-@media (max-width: 991px) {
+  /* Adaptation Section - 选择起点模块 */
   .adaptation-section {
-    padding: 80px 20px;
+    background-color: var(--color-bg);
+    padding: 120px 20px;
+    position: relative;
+    overflow: hidden;
   }
 
-  .adaptation-title {
-    font-size: 36px;
+  .adaptation-container {
+    max-width: 1500px;
+    margin: 0 auto;
+    text-align: center;
   }
 
-  .adaptation-subtitle {
-    font-size: 16px;
-    margin-bottom: 40px;
-  }
-
-  .adaptation-outer-card {
-    padding: 32px;
-  }
-
-  .adaptation-cards {
-    grid-template-columns: 1fr;
-    gap: 32px;
-  }
-
-  .adaptation-card-image {
-    height: 320px;
-  }
-}
-
-/* 响应式设计 - 手机 */
-@media (max-width: 767px) {
-  .adaptation-section {
-    padding: 60px 16px;
-  }
-
-  .adaptation-title {
-    font-size: 28px;
-    margin-bottom: 12px;
-  }
-
-  .adaptation-subtitle {
-    font-size: 15px;
-    margin-bottom: 32px;
-  }
-
-  .adaptation-outer-card {
-    padding: 24px;
-  }
-
-  .adaptation-cards {
-    gap: 28px;
-  }
-
-  .adaptation-card-image {
-    height: 280px;
-  }
-
-  .adaptation-card-title {
+  /* 顶部标签 */
+  .adaptation-label {
+    font-family: 'Sora', sans-serif;
     font-size: 20px;
+    letter-spacing: 0px;
+    text-transform: uppercase;
+    color: #888888;
+    margin-bottom: 20px;
+    font-weight: 300;
   }
 
-  .adaptation-card-description {
-    font-size: 14px;
-  }
-}
-
-@media (max-width: 479px) {
+  /* 主标题 */
   .adaptation-title {
-    font-size: 24px;
+    font-size: 42px;
+    font-weight: 700;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+    line-height: 1.2;
   }
 
+  /* 副标题 */
   .adaptation-subtitle {
-    font-size: 14px;
+    font-family: 'Sora', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: #999999;
+    margin-bottom: 20px;
+    line-height: 1.6;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
+  /* 外层包裹容器 - 类似 assistant 的 card 容器 */
+  .adaptation-wrapper {
+    max-width: 1215px;
+    margin: 0 auto;
+  }
+
+  .adaptation-outer-card {
+    background: var(--color-bg-secondary);
+    border-radius: 24px;
+    padding: 43px 56px 48px;
+    min-height: 523px;
+    display: flex;
+    align-items: flex-start;
+    transition: all var(--transition);
+  }
+
+  .adaptation-outer-card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+  }
+
+  /* 卡片容器 - 三个功能项并排 */
+  .adaptation-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 72px;
+    align-items: stretch;
+    width: 100%;
+  }
+
+  /* 单个卡片 */
+  .adaptation-card {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    background: transparent;
+    max-width: 320px;
+    margin: 0 auto;
+  }
+
+  .adaptation-card:hover {
+    transform: translateY(-4px);
+  }
+
+  /* 卡片图片容器 */
+  .adaptation-card-image-wrapper {
+    width: 100%;
+    overflow: hidden;
+    border-radius: 16px;
+    margin-bottom: 24px;
+  }
+
+  /* 卡片图片 */
   .adaptation-card-image {
-    height: 240px;
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+    display: block;
+    transition: transform 0.4s ease;
   }
 
-  .adaptation-card-title {
-    font-size: 18px;
+  .adaptation-card:hover .adaptation-card-image {
+    transform: scale(1.05);
   }
-}
+
+  /* 卡片视频 */
+  .adaptation-card-video {
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+    display: block;
+    transition: transform 0.4s ease;
+    cursor: pointer;
+  }
+
+  .adaptation-card:hover .adaptation-card-video {
+    transform: scale(1.05);
+  }
+
+  /* 视频预览模态框 */
+  .video-modal {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(10px);
+  }
+
+  .video-modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+    width: auto;
+    height: auto;
+  }
+
+  .video-modal video {
+    width: 100%;
+    height: 100%;
+    max-width: 80vw;
+    max-height: 80vh;
+    object-fit: contain;
+  }
+
+  .video-modal-close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10001;
+    transition: color 0.3s ease;
+  }
+
+  .video-modal-close:hover {
+    color: #ccc;
+  }
+
+  /* 卡片内容区域（图片下方）*/
+  .adaptation-card-content {
+    padding: 0 12px;
+    text-align: center;
+  }
+
+  /* 卡片标题 */
+  .adaptation-card-title {
+    font-family: 'Sora', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    color: #FFFFFF;
+    margin-bottom: 12px;
+    line-height: 1.3;
+  }
+
+  /* 卡片描述 */
+  .adaptation-card-description {
+    font-family: 'Sora', sans-serif;
+    font-size: 1.2rem;
+    font-weight: 300;
+    color: #CCCCCC;
+    line-height: 1.6;
+    margin: 0;
+  }
+
+  /* 响应式设计 - 平板 */
+  @media (max-width: 991px) {
+    .adaptation-section {
+      padding: 80px 20px;
+    }
+
+    .adaptation-title {
+      font-size: 36px;
+    }
+
+    .adaptation-subtitle {
+      font-size: 16px;
+      margin-bottom: 40px;
+    }
+
+    .adaptation-outer-card {
+      padding: 32px;
+    }
+
+    .adaptation-cards {
+      grid-template-columns: 1fr;
+      gap: 32px;
+    }
+
+    .adaptation-card-image {
+      height: 320px;
+    }
+  }
+
+  /* 响应式设计 - 手机 */
+  @media (max-width: 767px) {
+    .adaptation-section {
+      padding: 60px 16px;
+    }
+
+    .adaptation-title {
+      font-size: 28px;
+      margin-bottom: 12px;
+    }
+
+    .adaptation-subtitle {
+      font-size: 15px;
+      margin-bottom: 32px;
+    }
+
+    .adaptation-outer-card {
+      padding: 24px;
+    }
+
+    .adaptation-cards {
+      gap: 28px;
+    }
+
+    .adaptation-card-image {
+      height: 280px;
+    }
+
+    .adaptation-card-title {
+      font-size: 20px;
+    }
+
+    .adaptation-card-description {
+      font-size: 14px;
+    }
+  }
+
+  @media (max-width: 479px) {
+    .adaptation-title {
+      font-size: 24px;
+    }
+
+    .adaptation-subtitle {
+      font-size: 14px;
+    }
+
+    .adaptation-card-image {
+      height: 240px;
+    }
+
+    .adaptation-card-title {
+      font-size: 18px;
+    }
+  }
 </style>
 
 <!-- Adaptation Section -->
@@ -298,68 +304,50 @@
       <div class="adaptation-outer-card">
         <!-- 三个卡片 -->
         <div class="adaptation-cards">
-      <!-- 卡片 1: From A Script -->
-      <div class="adaptation-card" data-video-card>
-        <div class="adaptation-card-image-wrapper">
-          <video
-            class="adaptation-card-video"
-            muted
-            loop
-            playsinline
-            data-video-src="videos/video_1.mp4"
-          >
-            <source src="videos/video_1.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="adaptation-card-content">
-          <h3 class="adaptation-card-title">From A Script</h3>
-          <p class="adaptation-card-description">
-            Upload your script to instantly visualize scenes.
-          </p>
-        </div>
-      </div>
+          <!-- 卡片 1: From A Script -->
+          <div class="adaptation-card" data-video-card>
+            <div class="adaptation-card-image-wrapper">
+              <video class="adaptation-card-video" muted loop playsinline data-video-src="videos/video_1.mp4">
+                <source src="videos/video_1.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="adaptation-card-content">
+              <h3 class="adaptation-card-title">From A Script</h3>
+              <p class="adaptation-card-description">
+                Upload your script to instantly visualize scenes.
+              </p>
+            </div>
+          </div>
 
-      <!-- 卡片 2: From A Concept -->
-      <div class="adaptation-card" data-video-card>
-        <div class="adaptation-card-image-wrapper">
-          <video
-            class="adaptation-card-video"
-            muted
-            loop
-            playsinline
-            data-video-src="videos/video_2.mp4"
-          >
-            <source src="videos/video_2.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="adaptation-card-content">
-          <h3 class="adaptation-card-title">From A Concept</h3>
-          <p class="adaptation-card-description">
-            Describe an idea and<br> explore directions, moods, <br>and visual possibilities with AI.
-          </p>
-        </div>
-      </div>
+          <!-- 卡片 2: From A Concept -->
+          <div class="adaptation-card" data-video-card>
+            <div class="adaptation-card-image-wrapper">
+              <video class="adaptation-card-video" muted loop playsinline data-video-src="videos/video_2.mp4">
+                <source src="videos/video_2.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="adaptation-card-content">
+              <h3 class="adaptation-card-title">From A Concept</h3>
+              <p class="adaptation-card-description">
+                Describe an idea and<br> explore directions, moods, <br>and visual possibilities with AI.
+              </p>
+            </div>
+          </div>
 
-      <!-- 卡片 3: From An Image -->
-      <div class="adaptation-card" data-video-card>
-        <div class="adaptation-card-image-wrapper">
-          <video
-            class="adaptation-card-video"
-            muted
-            loop
-            playsinline
-            data-video-src="videos/总设计.mp4"
-          >
-            <source src="videos/总设计.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="adaptation-card-content">
-          <h3 class="adaptation-card-title">From An Image</h3>
-          <p class="adaptation-card-description">
-            Use a single reference to build a cohesive visual narrative.
-          </p>
-        </div>
-      </div>
+          <!-- 卡片 3: From An Image -->
+          <div class="adaptation-card" data-video-card>
+            <div class="adaptation-card-image-wrapper">
+              <video class="adaptation-card-video" muted loop playsinline data-video-src="videos/总设计.mp4">
+                <source src="videos/总设计.mp4" type="video/mp4">
+              </video>
+            </div>
+            <div class="adaptation-card-content">
+              <h3 class="adaptation-card-title">From An Image</h3>
+              <p class="adaptation-card-description">
+                Use a single reference to build a cohesive visual narrative.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -390,7 +378,7 @@
         if (!video) return;
 
         // 视频加载错误处理
-        video.addEventListener('error', function() {
+        video.addEventListener('error', function () {
           console.warn(`Failed to load video: ${this.querySelector('source').src}`);
           this.style.display = 'none';
         });
