--- a/sections/footer/footer.html
+++ b/sections/footer/footer.html
@@ -7,9 +7,10 @@
 
 .footer-container {
   position: relative;
-  max-width: 1520px;
-  margin: 0 auto;
+  width: 100%;
   padding: 0 3rem;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 /* 上方大框 */
